--- a/src/app/explore-container/explore-container.component.html
+++ b/src/app/explore-container/explore-container.component.html
@@ -1,15 +1,8 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
     <ion-title>
-      <a [routerLink]="['/tabs/tab1']">Home</a>
+      <a [routerLink]="['/home']">Home</a>
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large"><a [routerLink]="['/tabs/tab1']">Home</a>
-      </ion-title>
-    </ion-toolbar>
-  </ion-header>
