--- a/src/app/pages/india/india.page.html
+++ b/src/app/pages/india/india.page.html
@@ -1,7 +1,5 @@
 
-<app-explore-container></app-explore-container>
-
-
+<ion-content overflow-scroll="false">
   <ion-card *ngFor="let article of articles">
     <ion-img src="{{article.urlToImage}}"></ion-img>
     <ion-card-header>
@@ -11,8 +9,8 @@
       <p>
         {{article.description}}
       </p>
-      <ion-button ion-button fill="outline" href="{{article.url}}" large>Read full article</ion-button>
-
+      <ion-button ion-button fill="outline" href="{{article.url}}">Read full article</ion-button>
     </ion-card-content>
+  
   </ion-card>
-
+  </ion-content>
