--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -2,12 +2,12 @@
 
   <ion-tab-bar slot="bottom">
 
-    <ion-tab-button tab="tab2">
+    <ion-tab-button tab="india">
       <ion-icon name="newspaper-Outline"></ion-icon>
       <ion-label>India</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab3">
+    <ion-tab-button tab="us">
       <ion-icon name="newspaper-Outline"></ion-icon>
       <ion-label>US</ion-label>
     </ion-tab-button>
